enhanced frontend functionality and squashed bugs

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
 }
+
+.footer {
+  /* bottom: 0; */
+  padding: 50px;
+  /* position: fixed; */
+  text-align: center;
+}
